--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -57,32 +57,13 @@ img, video {
     }
 } */
 
-@media screen and (max-width: 815px) {
-    .headMENU-R {
-        margin-top: 3px !important;
-    }
-
-    /* .headSubMENU {   SCROLLING TEXT .. 558px -> 565px -> 563px -> 543px -> 553px -> 815px
-        float: none;
-        margin-top: 49px;
-    } */
-
-    .headSubMENU {
-        display: none;
-    }
-    
-    .underMENU {
-        padding-top: 49px;
-    }
-}
-
 @media screen and (max-width: 320px) {  /* HIDE PROBLEMATIC ELEMENT ON SMALL SCREENS */
     h1 {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     h2 {
-        font-size: 15px;
+        display: none;
     }
     
     .underMENU {
@@ -94,23 +75,6 @@ img, video {
     }
 }
 
-@media screen and (max-width: 400px) {
-    .mediaPOST {
-        padding-left: 5px !important;
-    }
-    
-    .mediaPOST img {
-        width: 95% !important;
-    }
-}
-
-@media screen and (max-width: 480px) {  /* HIDE PROBLEMATIC ELEMENT ON SMALL SCREENS */
-    .mediaPOST {
-        filter: blur(0px);
-        -webkit-filter: blur(0px);
-    }
-}
-
 @media screen and (max-width: 412px) {
     h1 {
         font-size: 32px;
@@ -118,6 +82,24 @@ img, video {
 
     h2 {
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 525px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 15px;
+    }
+
+    .mediaPOST {
+        padding-left: 5px !important;
+    }
+    
+    .mediaPOST img {
+        width: 95% !important;
     }
 }
 
@@ -176,6 +158,25 @@ img, video {
     .headSubMENU {  /* SCROLLING TEXT */
         float: none;
         margin-top: 5px;
+    }
+}
+
+@media screen and (max-width: 815px) {
+    .headMENU-R {
+        margin-top: 3px !important;
+    }
+
+    /* .headSubMENU {   SCROLLING TEXT .. 558px -> 565px -> 563px -> 543px -> 553px -> 815px
+        float: none;
+        margin-top: 49px;
+    } */
+
+    .headSubMENU {
+        display: none;
+    }
+    
+    .underMENU {
+        padding-top: 49px;
     }
 }
 
