--- a/webTree/profiles/template/pageTemplate.html
+++ b/webTree/profiles/template/pageTemplate.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/membersStyle.css" type="text/css">
     <link rel="stylesheet" href="../../../style/scrollBAR.css" type="text/css">
+    <link rel="stylesheet" href="../../../style/cssFonts/fontConsolas.css" type="text/css">
 
     <link rel="icon" href="../../../favicon/nine9.png" type="image/png">
 
@@ -34,11 +35,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
@@ -60,7 +61,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: aliceblue"> @template </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
@@ -232,7 +233,7 @@
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
                     templatePost#embedHTML <br> <br>
-                    <iframe class="textBORDERembedHTML" src="../../homepage" type="text/html" title="[ i ]  embeddedHTML"> </iframe>
+                    <iframe class="textBORDERembedHTML" src="../../homepage/index.html" type="text/html" title="[ i ]  embeddedHTML"> </iframe>
                 </p>
                 <p style="text-align: right; padding-top: 10px; padding-right: 15px">
                 <span class="toolTIP">
@@ -241,8 +242,6 @@
                 </span>
                 </p>
             </div>
-
-            <!-- newPOST -->
         </div>
     </div>
 </body>
