--- a/webTree/profiles/template/pageTemplate.html
+++ b/webTree/profiles/template/pageTemplate.html
@@ -96,7 +96,7 @@
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
                                     <a href="javascript:window.location.href=window.location.href" style="color: aliceblue;">@template</a>
-                                    <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
+                                    <span class="toolTIPtxt" style="margin-left: -50px"> tempUSR </span>
                                 </span>
                             </span> ::  <span class="postDate toolTIP">
                                                 [MMM DD, YYYY : HH:MM AM/PM]
@@ -140,7 +140,7 @@
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
                                 <a href="javascript:window.location.href=window.location.href" style="color: aliceblue;">@template</a>
-                                <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
+                                <span class="toolTIPtxt" style="margin-left: -50px"> tempUSR </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
                                         [MMM DD, YYYY : HH:MM AM/PM]
@@ -193,7 +193,7 @@
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
                                 <a href="javascript:window.location.href=window.location.href" style="color: aliceblue;">@template</a>
-                                <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
+                                <span class="toolTIPtxt" style="margin-left: -50px"> tempUSR </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
                                             [MMM DD, YYYY : HH:MM AM/PM]
@@ -222,7 +222,7 @@
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
                                 <a href="javascript:window.location.href=window.location.href" style="color: aliceblue;">@template</a>
-                                <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
+                                <span class="toolTIPtxt" style="margin-left: -50px"> tempUSR </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
                                             [MMM DD, YYYY : HH:MM AM/PM]
