--- a/style/mainStyleWOFF.css
+++ b/style/mainStyleWOFF.css
@@ -1,4 +1,4 @@
-/* ALT STYLE SHEET FILE FOR WOFF/WOFF2 FONTS */
+/* .WOFF2 font variants in case if needed */
 
 @font-face {
     font-family: 'consolasregular';
