--- a/style/scrollBAR404.css
+++ b/style/scrollBAR404.css
@@ -1,15 +1,15 @@
-/* CUSTOM SCROLLBAR STYLE */
+/* custom scrollbar to match page theme */
 
-::-webkit-scrollbar {   /* SCROLLBAR WIDTH */
+::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
 
-::-webkit-scrollbar-track {     /* SCROLLBAR AREA */
+::-webkit-scrollbar-track {
     background: rgb(40, 45, 55);
 }
 
-::-webkit-scrollbar-thumb {     /* SCROLLBAR */
+::-webkit-scrollbar-thumb {
     background: rgb(50, 55, 65);
     border-radius: 5px;
 }
@@ -18,6 +18,6 @@
     background: rgb(40, 45, 55);
 }
 
-::-webkit-scrollbar-thumb:hover {   /* SCROLLBAR HANDLE ON HOVER */
+::-webkit-scrollbar-thumb:hover {
     background: rgb(70,75, 85);
 }
